# AndroidPracticeDemo

./: .gitignore  18.迭代器设计模式 - 构建通用 BottomTabNavigat.md  MPAndroidChart-BarChart(柱状图).md  MPAndroidChart.md  README.en.md  README.md  adb项目中常用指令.md  build.gradle  gradle.properties  settings.gradle  versions.gradle  版本适配-Android7.0文件访问权限.md
1.dnNDK开发/code/lsn4/lsn4_example/lsn4_example/: CMakeLists.txt  Extends.h  Student.cpp  Student.h  lsn4_example.cpp  lsn4_example.h  operator.h
1.dnNDK开发/code/lsn6/lsn6_example/lsn6_example/: CMakeLists.txt  Ptr.h  lsn6_example.cpp  lsn6_example.h  safe_queue.h
1.dnNDK开发/code/lsn7/lsn7_example/lsn7_example/: CMakeLists.txt  ExampleUnitTest.h  lsn7_example.cpp
1.动脑学院笔记2019/1.dnNDK开发/code/lsn3/ffmpeg_example/ffmpeg_example/: CMakeLists.txt  ffmpeg_example.cpp  ffmpeg_example.h
1.动脑学院笔记2019/1.dnNDK开发/code/lsn7/lsn7_example/lsn7_example/: CMakeLists.txt
architect_zenghui/: 1.面向对象六大基本原则-网络引擎切换.md  10.工厂模式-数据存储的特有方式.md  11.装饰设计模式-RecyclerView添加头部和底部.md  12.模板设计模式-手写OkHttpDispatcher.md  13.策略模式-Log 日志输出策略.md  14.Adapter设计模式-打造通用的IndicatorView.md  15.观察者设计模式-观察数据的插入.md  17.原型设计模式-订单查询拆分.md  18.迭代器设计模式 - 构建通用 BottomTabNavigation.md  19.责任链设计模式 - QQ微信多用户系统检测.md  2.AOP面向切面编程-京东淘宝网络处理.md  20.享元-命令-组合设计模式.md  21.状态-桥接-中介-访问-备忘录设计模式.md  22.EventBus源码分析和手写.md  23.第三方开源库 OKHttp - Java网络编程基础.md  24.第三方开源库 OKHttp - 整体架构和源码分析.md  26.第三方开源库 OKHttp - 源码精髓拦截器分析.md  27.第三方开源库 OKHttp - 上传进度监听和自定义缓存.md  28.第三方开源库 OKHttp - 文件断点下载.md  30.第三方开源库 RxJava - 自己动手写事件变换.md  31.第三方开源库 RxJava - 自己动手线程调度切换.md  32.第三方开源库 RxJava - Android实际开发场景.md  33.第三方开源库 Retrofit - 源码设计模式分析.md  34.第三方开源库 Retrofit - 自己动手写核心架构部分.md  35.第三方开源库 - OkHttp + RxJava + Retrofit.md  36. 第三方开源库 Retrofit - 自己动手优化网络引擎.md  37.开发模式 MVP - 基础框架搭建分析.md  38. 开发模式 MVP - 静态代理和动态扩展.md  39. 项目实战 - 代码架构和运行时架构.md  4.反射-注解和泛型.md  40. 项目实战 - 系统架构部分的总结和展望.md  41.第三方开源库 Glide - 源码分析（补）.md  42. Android 多模块多组件开发 - 打造属于自己的路由.md  43. 经验分享 - 深圳社招大厂面试分享（补）.md  5.apt(Annotation Processing Tool) Butterknife源码分析和手写.md  6.apt(Annotation Processing Tool) 绕过微信支付和分享.md  7.Handler 源码解析和手写.md  9.Builder模式-增强的Navigationbar.md  Glide时序图流程.mdj  build.gradle  (+2 more)
architecture_components/: README.md  README_Paging Library.md  README_Room.md  README_WorkManager.md  build.gradle
arouterpractice/: README.md  build.gradle
arouterpractice2/: build.gradle
customview/: 1.自定义TextView.md  10.ViewGroup的Touch分发事件.md  11.仿酷狗侧滑效果.md  21.58同城数据加载动画.md  22.常见多条目菜单筛选.md  24.贝塞尔曲线1-QQ消息气泡拖拽.md  25.贝塞尔曲线2-任何View都可拖拽爆炸.md  26.贝塞尔曲线3-花椒直播点赞效果.md  28.视差动画2-雅虎新闻摘要加载.md  29-1.Activity的启动流程.md  29-1.Activity的启动流程源码.md  3.变色字体-clipRect.md  5.RatingBar评价练习-drawable.md  7.View的绘制流程.md  8.流式布局TabLayout.md  9.View的Touch分发事件.md  CustomView.md  Paint练习-path和Math.sin.md  View的绘制流程.md  build.gradle  仿QQ运动步数-圆弧.md  字母索引表.md  自定义TextView.md
databinding/: DataBinding.md  README.md  build.gradle
navigation/: build.gradle
(+2441 files in other folders)
